--- a/index.html
+++ b/index.html
@@ -19,17 +19,12 @@
     </section>
 
     <section class="main-content">
-      <p><img src="https://github.com/rddunlap23/DSI-Kiva-Capstone/blob/gh-pages/images/Kiva-Expire.png" alt=""></p>
-
-<h3>
+      <h3>
 <a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Welcome to GitHub Pages.</h3>
 
+<p>This automatic page generator is the easiest way to create beautiful pages for all of your projects. Author your page content here <a href="https://guides.github.com/features/mastering-markdown/">using GitHub Flavored Markdown</a>, select a template crafted by a designer, and publish. After your page is generated, you can check out the new <code>gh-pages</code> branch locally. If you’re using GitHub Desktop, simply sync your repository and you’ll see the new branch.</p>
+
 <p><img src="https://github.com/rddunlap23/DSI-Kiva-Capstone/blob/gh-pages/images/Kiva-Expire.png?raw=true" alt="Title"></p>
-
-
-
-
-<p>Having trouble with Pages? Check out our <a href="https://help.github.com/pages">documentation</a> or <a href="https://github.com/contact">contact support</a> and we’ll help you sort it out.</p>
 
       <footer class="site-footer">
         <span class="site-footer-owner"><a href="https://github.com/rddunlap23/DSI-Kiva-Capstone">Dsi-kiva-capstone</a> is maintained by <a href="https://github.com/rddunlap23">rddunlap23</a>.</span>
