@#%@#% with the index file

--- a/index.html
+++ b/index.html
@@ -20,7 +20,17 @@
 
     <section class="main-content">
       <h3>
-<a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Welcome to GitHub Pages.</h3>
+
+<p><img src="https://github.com/rddunlap23/DSI-Kiva-Capstone/blob/gh-pages/images/kiva-loans-life.jpg?raw=true" alt="Title"></p>
+
+<a id="business-problem" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Kiva Life of a Loan:</h3>
+
+<span> <a href="https://www.kiva.org/about/how">Kiva Loan Life Cycle</a> </span>
+
+
+<a id="business-problem" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Business Problem:</h3>
+
+<p>To ensure that loans on the website reflect the current reality on the ground and to help ensure that capital is being effeciently allocated in 2012 Kiva instituted a 30 day expiratoin policy for all posted loans. </p>
 
 <p>This automatic page generator is the easiest way to create beautiful pages for all of your projects. Author your page content here <a href="https://guides.github.com/features/mastering-markdown/">using GitHub Flavored Markdown</a>, select a template crafted by a designer, and publish. After your page is generated, you can check out the new <code>gh-pages</code> branch locally. If you’re using GitHub Desktop, simply sync your repository and you’ll see the new branch.</p>
 
