--- a/index.html
+++ b/index.html
@@ -19,22 +19,27 @@
     </section>
 
     <section class="main-content">
-      <h3>
+      <p><img src="https://github.com/rddunlap23/DSI-Kiva-Capstone/blob/gh-pages/images/kiva-loans-life.jpg?raw=true" alt="Title"></p>
 
-<p><img src="https://github.com/rddunlap23/DSI-Kiva-Capstone/blob/gh-pages/images/kiva-loans-life.jpg?raw=true" alt="Title"></p>
+<h2>
+<a id="kiva-life-of-a-loan" class="anchor" href="#kiva-life-of-a-loan" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Kiva Life of a Loan:</h2>
 
-<a id="business-problem" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Kiva Life of a Loan:</h3>
+<p><a href="https://www.kiva.org/about/how">Kiva Loan Lifecycle</a></p>
 
-<span> <a href="https://www.kiva.org/about/how">Kiva Loan Life Cycle</a> </span>
+<p>The life of a loan generally follows the following lifecycle:
+1. Borrowers apply to a local Field Partner, which manages the loan on the ground. 
+2. Partner loans are facilitated by local nonprofits or lending institutions, which approve the borrower’s loan request. Kiva does due diligence and ongoing monitoring for each of these Field Partners.
+3. Disbursal refers to when the borrower can access the money— the timing of this can vary. For most Field Partner loans, the money is pre-disbursed, so the borrower can access the funds right away. 
+4. Depending on the type of loan, a Field Partner or borrower uploads the loan details into the system. Our worldwide network of volunteers then helps to edit and translate loans before they go live on the website for lenders to crowdfund.
+5. Lenders receive repayments over time, based on the given repayment schedule and the borrower’s ability to repay. The repayments go into the lenders’ Kiva accounts.
+6. Lenders use repayments to fund new loans, donate or withdraw the money.</p>
 
-
-<a id="business-problem" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Business Problem:</h3>
-
-<p>To ensure that loans on the website reflect the current reality on the ground and to help ensure that capital is being effeciently allocated in 2012 Kiva instituted a 30 day expiratoin policy for all posted loans. </p>
+<h3>
+<a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Welcome to GitHub Pages.</h3>
 
 <p>This automatic page generator is the easiest way to create beautiful pages for all of your projects. Author your page content here <a href="https://guides.github.com/features/mastering-markdown/">using GitHub Flavored Markdown</a>, select a template crafted by a designer, and publish. After your page is generated, you can check out the new <code>gh-pages</code> branch locally. If you’re using GitHub Desktop, simply sync your repository and you’ll see the new branch.</p>
 
-<p><img src="https://github.com/rddunlap23/DSI-Kiva-Capstone/blob/gh-pages/images/Kiva-Expire.png?raw=true" alt="Title"></p>
+<p><img src="https://github.com/rddunlap23/DSI-Kiva-Capstone/blob/gh-pages/images/kiva-loans-life.jpg?raw=true" alt="Title"></p>
 
       <footer class="site-footer">
         <span class="site-footer-owner"><a href="https://github.com/rddunlap23/DSI-Kiva-Capstone">Dsi-kiva-capstone</a> is maintained by <a href="https://github.com/rddunlap23">rddunlap23</a>.</span>
