Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -26,13 +26,17 @@
 
 <p><a href="https://www.kiva.org/about/how">Kiva Loan Lifecycle</a></p>
 
-<p>The life of a loan generally follows the following lifecycle:
-1. Borrowers apply to a local Field Partner, which manages the loan on the ground. 
-2. Partner loans are facilitated by local nonprofits or lending institutions, which approve the borrower’s loan request. Kiva does due diligence and ongoing monitoring for each of these Field Partners.
-3. Disbursal refers to when the borrower can access the money— the timing of this can vary. For most Field Partner loans, the money is pre-disbursed, so the borrower can access the funds right away. 
-4. Depending on the type of loan, a Field Partner or borrower uploads the loan details into the system. Our worldwide network of volunteers then helps to edit and translate loans before they go live on the website for lenders to crowdfund.
-5. Lenders receive repayments over time, based on the given repayment schedule and the borrower’s ability to repay. The repayments go into the lenders’ Kiva accounts.
-6. Lenders use repayments to fund new loans, donate or withdraw the money.</p>
+<p>The life of a loan generally follows the following lifecycle:</p>
+
+<ol>
+<li><p>Borrowers apply to a local Field Partner, which manages the loan on the ground. </p></li>
+<li><p>Partner loans are facilitated by local nonprofits or lending institutions, which approve the borrower’s loan request. Kiva does due diligence and ongoing monitoring for each of these Field Partners.</p></li>
+<li><p>Disbursal refers to when the borrower can access the money— the timing of this can vary. For most Field Partner loans, the money is pre-disbursed, so the borrower can access the funds right away. </p></li>
+<li><p>Depending on the type of loan, a Field Partner or borrower uploads the loan details into the 
+system. Our worldwide network of volunteers then helps to edit and translate loans before they go live on the website for lenders to crowdfund.</p></li>
+<li><p>Lenders receive repayments over time, based on the given repayment schedule and the borrower’s ability to repay. The repayments go into the lenders’ Kiva accounts.</p></li>
+<li><p>Lenders use repayments to fund new loans, donate or withdraw the money.</p></li>
+</ol>
 
 <h3>
 <a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Welcome to GitHub Pages.</h3>
