Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -53,6 +53,8 @@ system. Our worldwide network of volunteers then helps to edit and translate loa
 
 <p>The goal of this project is to build a model that will help predict if a loan is at risk of being funded. Armed with this knowledge Kiva can either work to feature these loans more prominently on the sight or work with field partners and borrowers to better present their loans to maximize demand and increase funding. </p>
 
+<p><img src="https://github.com/rddunlap23/DSI-Kiva-Capstone/blob/master/loan_amount.html" alt="loat_map"></p>
+
       <footer class="site-footer">
         <span class="site-footer-owner"><a href="https://github.com/rddunlap23/DSI-Kiva-Capstone">Dsi-kiva-capstone</a> is maintained by <a href="https://github.com/rddunlap23">rddunlap23</a>.</span>
 
