Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -4,40 +4,31 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
     <title>Dsi-kiva-capstone by rddunlap23</title>
-    <link rel="stylesheet" href="stylesheets/styles.css">
-    <link rel="stylesheet" href="stylesheets/github-dark.css">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
-    <script src="javascripts/main.js"></script>
-    <!--[if lt IE 9]>
-      <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
-    <![endif]-->
-    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
 
+    <link rel="stylesheet" href="stylesheets/styles.css">
+    <link rel="stylesheet" href="stylesheets/github-light.css">
+    <script src="javascripts/scale.fix.js"></script>
+    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
+    <!--[if lt IE 9]>
+    <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
+    <![endif]-->
   </head>
   <body>
-
-      <header>
-        <h1>Dsi-kiva-capstone</h1>
-        <p>Capstone Project for GA DSI Class</p>
-      </header>
-
-      <div id="banner">
-        <span id="logo"></span>
-
-        <a href="https://github.com/rddunlap23/DSI-Kiva-Capstone" class="button fork"><strong>View On GitHub</strong></a>
-        <div class="downloads">
-          <span>Downloads:</span>
-          <ul>
-            <li><a href="https://github.com/rddunlap23/DSI-Kiva-Capstone/zipball/master" class="button">ZIP</a></li>
-            <li><a href="https://github.com/rddunlap23/DSI-Kiva-Capstone/tarball/master" class="button">TAR</a></li>
-          </ul>
-        </div>
-      </div><!-- end banner -->
-
     <div class="wrapper">
-      <nav>
-        <ul></ul>
-      </nav>
+      <header>
+        <h1 class="header">Dsi-kiva-capstone</h1>
+        <p class="header">Capstone Project for GA DSI Class</p>
+
+        <ul>
+          <li class="download"><a class="buttons" href="https://github.com/rddunlap23/DSI-Kiva-Capstone/zipball/master">Download ZIP</a></li>
+          <li class="download"><a class="buttons" href="https://github.com/rddunlap23/DSI-Kiva-Capstone/tarball/master">Download TAR</a></li>
+          <li><a class="buttons github" href="https://github.com/rddunlap23/DSI-Kiva-Capstone">View On GitHub</a></li>
+        </ul>
+
+        <p class="header">This project is maintained by <a class="header name" href="https://github.com/rddunlap23">rddunlap23</a></p>
+
+
+      </header>
       <section>
         <p><img src="https://github.com/rddunlap23/DSI-Kiva-Capstone/blob/gh-pages/images/kiva-loans-life.jpg?raw=true" alt="Title"></p>
 
@@ -76,13 +67,20 @@ system. Our worldwide network of volunteers then helps to edit and translate loa
 <p>The goal of this project is to build a model that will help predict if a loan is at risk of being funded. Armed with this knowledge Kiva can either work to feature these loans more prominently on the sight or work with field partners and borrowers to better present their loans to maximize demand and increase funding. </p>
 
 <p><img src="https://github.com/rddunlap23/DSI-Kiva-Capstone/blob/master/loan_amount.html" alt="load_map"></p>
+
+<h2>
+<a id="exploring-kiva-expired-loans" class="anchor" href="#exploring-kiva-expired-loans" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Exploring Kiva Expired Loans</h2>
+
+<p><img src="https://github.com/rddunlap23/DSI-Kiva-Capstone/blob/master/assets/country.png" alt="country">
+<img src="https://github.com/rddunlap23/DSI-Kiva-Capstone/blob/master/assets/income_level.png" alt="income-level">
+<img src="https://github.com/rddunlap23/DSI-Kiva-Capstone/blob/master/assets/region.png" alt="region">
+<img src="https://github.com/rddunlap23/DSI-Kiva-Capstone/blob/master/assets/sector.png" alt="sectors"></p>
       </section>
       <footer>
-        <p>Project maintained by <a href="https://github.com/rddunlap23">rddunlap23</a></p>
-        <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://twitter.com/michigangraham">mattgraham</a></small></p>
+        <p><small>Hosted on <a href="https://pages.github.com">GitHub Pages</a> using the Dinky theme</small></p>
       </footer>
     </div>
     <!--[if !IE]><script>fixScale(document);</script><![endif]-->
-    
+		
   </body>
 </html>
