--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@ system. Our worldwide network of volunteers then helps to edit and translate loa
 <p>The goal of this project is to build a model that will help predict if a loan is at risk of being funded. Armed with this knowledge Kiva can either work to feature these loans more prominently on the sight or work with field partners and borrowers to better present their loans to maximize demand and increase funding. </p>
 
 <h2>
-<a id="exploring-breakdown-of-who-kiva-loans-to" class="anchor" href="#exploring-breakdown-of-who-kiva-loans-to" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Exploring Breakdown of Who Kiva Loans To</h2>
+<a id="exploring-funded-kiva-loans" class="anchor" href="#exploring-funded-kiva-loans" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Exploring Funded Kiva Loans</h2>
 
 <p>First off before jumping into exploring who has trouble getting loans funded on Kiva I want to take a moment to explore the breakdown of the loans they do make. All of the below figures are for loans made from November 29th, 2011 through August 22nd, 2016. During this period Kiva made a total of 694,202 loans for  $588,538,975. As you can see from the below plots a few things stand out. (One note is that only displaying top 25 countries by $ loaned)</p>
 
@@ -80,9 +80,9 @@ system. Our worldwide network of volunteers then helps to edit and translate loa
 </ul>
 
 <p><img src="https://github.com/rddunlap23/DSI-Kiva-Capstone/blob/master/assets/gender_loaned.png?raw=True" alt="gender_amount">
-<img src="https://github.com/rddunlap23/DSI-Kiva-Capstone/blob/master/assets/sector_loaned.png" alt="sector_amount">
-<img src="https://github.com/rddunlap23/DSI-Kiva-Capstone/blob/master/assets/region_loaned.png" alt="region_loaned">
-<img src="https://github.com/rddunlap23/DSI-Kiva-Capstone/blob/master/assets/country_loaned.png" alt="country_loaned"></p>
+<img src="https://github.com/rddunlap23/DSI-Kiva-Capstone/blob/master/assets/sector_loaned.png?raw=True" alt="sector_amount">
+<img src="https://github.com/rddunlap23/DSI-Kiva-Capstone/blob/master/assets/region_loaned.png?raw=True" alt="region_loaned">
+<img src="https://github.com/rddunlap23/DSI-Kiva-Capstone/blob/master/assets/country_loaned.png?raw=True" alt="country_loaned"></p>
 
 <h2>
 <a id="exploring-kiva-expired-loans" class="anchor" href="#exploring-kiva-expired-loans" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Exploring Kiva Expired Loans</h2>
