Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -82,6 +82,7 @@ system. Our worldwide network of volunteers then helps to edit and translate loa
 </ul>
 
 <p><img src="https://github.com/rddunlap23/DSI-Kiva-Capstone/blob/master/assets/gender_loaned.png?raw=True" alt="gender_amount">
+<img src="https://github.com/rddunlap23/DSI-Kiva-Capstone/blob/master/assets/gender_loan_count.png?raw=True" alt="gender_count">
 <img src="https://github.com/rddunlap23/DSI-Kiva-Capstone/blob/master/assets/sector_loaned.png?raw=True" alt="sector_amount">
 <img src="https://github.com/rddunlap23/DSI-Kiva-Capstone/blob/master/assets/region_loaned.png?raw=True" alt="region_loaned">
 <img src="https://github.com/rddunlap23/DSI-Kiva-Capstone/blob/master/assets/country_loaned.png?raw=True" alt="country_loaned"></p>
