Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -1,35 +1,36 @@
-<!doctype html>
+<!DOCTYPE html>
 <html>
+
   <head>
-    <meta charset="utf-8">
+    <meta charset='utf-8'>
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>DSI Capstone - Kiva Microloans by rddunlap23</title>
+    <meta name="description" content="DSI Capstone - Kiva Microloans : Exploring Why Kiva Loans Expire">
 
-    <link rel="stylesheet" href="stylesheets/styles.css">
-    <link rel="stylesheet" href="stylesheets/github-light.css">
-    <script src="javascripts/scale.fix.js"></script>
-    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
-    <!--[if lt IE 9]>
-    <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
-    <![endif]-->
+    <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
+
+    <title>DSI Capstone - Kiva Microloans</title>
   </head>
+
   <body>
-    <div class="wrapper">
-      <header>
-        <h1 class="header">DSI Capstone - Kiva Microloans</h1>
-        <p class="header">Exploring Why Kiva Loans Expire</p>
 
-        <ul>
-          <li class="download"><a class="buttons" href="https://github.com/rddunlap23/DSI-Kiva-Capstone/zipball/master">Download ZIP</a></li>
-          <li class="download"><a class="buttons" href="https://github.com/rddunlap23/DSI-Kiva-Capstone/tarball/master">Download TAR</a></li>
-          <li><a class="buttons github" href="https://github.com/rddunlap23/DSI-Kiva-Capstone">View On GitHub</a></li>
-        </ul>
+    <!-- HEADER -->
+    <div id="header_wrap" class="outer">
+        <header class="inner">
+          <a id="forkme_banner" href="https://github.com/rddunlap23/DSI-Kiva-Capstone">View on GitHub</a>
 
-        <p class="header">This project is maintained by <a class="header name" href="https://github.com/rddunlap23">rddunlap23</a></p>
+          <h1 id="project_title">DSI Capstone - Kiva Microloans</h1>
+          <h2 id="project_tagline">Exploring Why Kiva Loans Expire</h2>
 
+            <section id="downloads">
+              <a class="zip_download_link" href="https://github.com/rddunlap23/DSI-Kiva-Capstone/zipball/master">Download this project as a .zip file</a>
+              <a class="tar_download_link" href="https://github.com/rddunlap23/DSI-Kiva-Capstone/tarball/master">Download this project as a tar.gz file</a>
+            </section>
+        </header>
+    </div>
 
-      </header>
-      <section>
+    <!-- MAIN CONTENT -->
+    <div id="main_content_wrap" class="outer">
+      <section id="main_content" class="inner">
         <p><img src="https://github.com/rddunlap23/DSI-Kiva-Capstone/blob/gh-pages/images/kiva-loans-life.jpg?raw=true" alt="Title"></p>
 
 <p><img src="https://github.com/rddunlap23/DSI-Kiva-Capstone/blob/gh-pages/images/Kiva-Mission.png?raw=true" alt="About-Kiva"></p>
@@ -82,10 +83,12 @@ system. Our worldwide network of volunteers then helps to edit and translate loa
 </ul>
 
 <p><img src="https://github.com/rddunlap23/DSI-Kiva-Capstone/blob/master/assets/gender_loaned.png?raw=True" alt="gender_amount">
-<img src="https://github.com/rddunlap23/DSI-Kiva-Capstone/blob/master/assets/gender_loan_count.png?raw=True" alt="gender_count">
-<img src="https://github.com/rddunlap23/DSI-Kiva-Capstone/blob/master/assets/sector_loaned.png?raw=True" alt="sector_amount">
+<img src="https://github.com/rddunlap23/DSI-Kiva-Capstone/blob/master/assets/gender_loan_count.png?raw=True" alt="gender_count"></p>
+
+<p><img src="https://github.com/rddunlap23/DSI-Kiva-Capstone/blob/master/assets/sector_loaned.png?raw=True" alt="sector_amount">
 <img src="https://github.com/rddunlap23/DSI-Kiva-Capstone/blob/master/assets/region_loaned.png?raw=True" alt="region_loaned">
-<img src="https://github.com/rddunlap23/DSI-Kiva-Capstone/blob/master/assets/country_loaned.png?raw=True" alt="country_loaned"></p>
+<img src="https://github.com/rddunlap23/DSI-Kiva-Capstone/blob/master/assets/country_loaned.png?raw=True" alt="country_loaned">
+<img src="https://github.com/rddunlap23/DSI-Kiva-Capstone/blob/master/assets/income_level_loaned.png?raw=True" alt="income_loaned"> </p>
 
 <h2>
 <a id="exploring-kiva-expired-loans" class="anchor" href="#exploring-kiva-expired-loans" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Exploring Kiva Expired Loans</h2>
@@ -98,20 +101,33 @@ system. Our worldwide network of volunteers then helps to edit and translate loa
 <li>While all regions have higher expiration rates for men South Asia and Sub-Saharan Africa's disparity is especially stark. </li>
 </ul>
 
-<p><img src="https://github.com/rddunlap23/DSI-Kiva-Capstone/blob/master/assets/country.png?raw=true" alt="country">
-<img src="https://github.com/rddunlap23/DSI-Kiva-Capstone/blob/master/assets/income_level.png?raw=true" alt="income-level">
+<p><img src="https://github.com/rddunlap23/DSI-Kiva-Capstone/blob/master/assets/sector.png?raw=true" alt="sectors">
 <img src="https://github.com/rddunlap23/DSI-Kiva-Capstone/blob/master/assets/region.png?raw=true" alt="region">
-<img src="https://github.com/rddunlap23/DSI-Kiva-Capstone/blob/master/assets/sector.png?raw=true" alt="sectors"></p>
+<img src="https://github.com/rddunlap23/DSI-Kiva-Capstone/blob/master/assets/country.png?raw=true" alt="country">
+<img src="https://github.com/rddunlap23/DSI-Kiva-Capstone/blob/master/assets/income_level.png?raw=true" alt="income-level"></p>
 
 <p>If you look at the below histogram you can see that the expired loans distribution (red) is is heavily skewed to the right of the funded loans distribution (blue). That it is more difficult to get larger loans funded doesn't come as much of a surprise, but that said it looks like this will be a good signal for our predictive model when we build it. </p>
 
 <p><img src="https://github.com/rddunlap23/DSI-Kiva-Capstone/blob/master/assets/loan_amount_dist.png?raw=true" alt="income-dist"></p>
+
+<p>Given that the loan size appears to make a difference in the % of loans that go un-funded I next want to take a look at our cross sections of sector, region, country, and income level by average loan size to see if it's that individuals in these cross sections tend to ask for higher dollar loans and if that is what is in fact driving the different funding rates. </p>
+
+<p><img src="https://github.com/rddunlap23/DSI-Kiva-Capstone/blob/master/assets/sectoravg_loaned.png?raw=true" alt="sector_avg">
+<img src="https://github.com/rddunlap23/DSI-Kiva-Capstone/blob/master/assets/regionavg_loaned.png?raw=true" alt="region_avg">
+<img src="https://github.com/rddunlap23/DSI-Kiva-Capstone/blob/master/assets/countryavg_loaned.png?raw=true" alt="country_avg">
+<img src="https://github.com/rddunlap23/DSI-Kiva-Capstone/blob/master/assets/income_levelavg_loaned.png?raw=True" alt="income_avg"></p>
       </section>
-      <footer>
-        <p><small>Hosted on <a href="https://pages.github.com">GitHub Pages</a> using the Dinky theme</small></p>
+    </div>
+
+    <!-- FOOTER  -->
+    <div id="footer_wrap" class="outer">
+      <footer class="inner">
+        <p class="copyright">DSI Capstone - Kiva Microloans maintained by <a href="https://github.com/rddunlap23">rddunlap23</a></p>
+        <p>Published with <a href="https://pages.github.com">GitHub Pages</a></p>
       </footer>
     </div>
-    <!--[if !IE]><script>fixScale(document);</script><![endif]-->
-		
+
+    
+
   </body>
 </html>
