Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -78,6 +78,19 @@ system. Our worldwide network of volunteers then helps to edit and translate loa
 <img src="https://github.com/rddunlap23/DSI-Kiva-Capstone/blob/master/assets/country_loaned.png?raw=True" alt="country_loaned">
 <img src="https://github.com/rddunlap23/DSI-Kiva-Capstone/blob/master/assets/income_level_loaned.png?raw=True" alt="income_loaned"> </p>
 
+<p>I want to further dig into the breakdown of the average loan size by the same demographics. A few things that stand out here:</p>
+
+<ul>
+<li>The disparity in average loan size by gender in most cases is relatively small. When you look by country where there is a larger discrepancy, with a few exceptions, it is women that are receiving the larger loans.</li>
+<li>Congo stands out as the 2nd highest average loan size despite being one of the countries identified as low income by the World Bank. Digging in further retail, food, and clothing were the top sectors for the Congo though these sectors are towards the middle of the pack for Kiva overall.</li>
+<li>Not surprisingly average loan size is positively correlated with income level.</li>
+</ul>
+
+<p><img src="https://github.com/rddunlap23/DSI-Kiva-Capstone/blob/master/assets/sectoravg_by_gender.png?raw=True" alt="sector_gender_avg">
+<img src="https://github.com/rddunlap23/DSI-Kiva-Capstone/blob/master/assets/regionavg_by_gender.png?raw=True" alt="region_gender_avg">
+<img src="https://github.com/rddunlap23/DSI-Kiva-Capstone/blob/master/assets/countryavg_by_gender.png?raw=True" alt="country_gender_avg">
+<img src="https://github.com/rddunlap23/DSI-Kiva-Capstone/blob/master/assets/income_levelavg_by_gender.png?raw=True" alt="income_gender_avg"></p>
+
 <h2>
 <a id="exploring-kiva-expired-loans" class="anchor" href="#exploring-kiva-expired-loans" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Exploring Kiva Expired Loans</h2>
 
